# recommendation-system-api-server

./: .env  .gitignore  Dockerfile  README.md  client.py  generate_ssl.sh  main.py  pyproject.toml  run_debug.fish
app/: __init__.py  config.py  database.py
app/api/: __init__.py  auth.py  mood.py  recommendations.py  spotify.py  users.py
app/api/v1/: __init__.py
app/api/v1/endpoints/: auth.py  mood.py  recommendations.py  spotify.py  users.py
app/models/: mood_record.py  user.py
app/schemas/: mood.py  recommendation.py  spotify.py  user.py
app/services/: jwt.py  lyrics_client.py  mood_client.py  spotify_client.py  spotify_service.py
app/utils/: errors.py
